# controllers/vehicle.js
@@ -40,6 +40,31 @@ const createVehicle = async(req, res) => {
 
 };
 
+const updateVehicleById = async(req, res) => {
+    const vehicleId = new ObjectId(req.params.id);
+    const updateVehicle = {
+        brand: req.body.brand,
+        model: req.body.model,
+        horsePower: req.body.horsePower,
+        fuelType: req.body.fuelType,
+        color: req.body.color,
+        category: req.body.category,
+        transmission: req.body.transmission,
+        numberPassenger: req.body.numberPassenger
+    };
+    const result = await mongodb
+        .getDb()
+        .db('portfolio-builder')
+        .collection("vehicle")
+        .replaceOne({ _id: vehicleId }, updateVehicle);
+    console.log(response);
+    if (result.modifiedCount > 0) {
+        res.status(204).send("Vehicle was updated.");
+    } else {
+        res.status(500).json(result.error || 'Some error occurred while updating the vehicle.');
+    }
+};
+
 const deleteVehicleById = async(req, res) => {
     const vehicleId = new ObjectId(req.params.id);
     const result = await mongodb
@@ -49,10 +74,10 @@ const deleteVehicleById = async(req, res) => {
         .deleteOne({ _id: vehicleId }, true);
     console.log(result);
     if (result.deletedCount > 0) {
-        res.status(200).send("Vehicle was deleted from database");
+        res.status(200).send("Vehicle was deleted from database.");
     } else {
         res.status(500).json(result.error || 'Some error occurred while deleting the vehicle.')
     }
 };
 
-module.exports = { getVehicle, getVehicleById, createVehicle, deleteVehicleById };
+module.exports = { getVehicle, getVehicleById, createVehicle, updateVehicleById, deleteVehicleById };
